Bug 98893 - [SKL] piglit.spec.arb_shader_image_load_store.semantics intermittent
Summary: [SKL] piglit.spec.arb_shader_image_load_store.semantics intermittent
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Kenneth Graunke
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-28 21:30 UTC by Mark Janes
Modified: 2016-12-06 20:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-11-28 21:30:20 UTC
First sighted at 

Author:     Kenneth Graunke <kenneth@whitecape.org>
i965: Always reserve clip distance VUE slots in SSO mode.

This commit may not be the root cause, due to the intermittent nature of the bug.

Standard Output

/tmp/build_root/m64/lib/piglit/bin/arb_shader_image_load_store-semantics --quick -auto -fbo
piglit: debug: Requested an OpenGL 3.2 Core Context, and received a matching 4.5 context

Probe value at (0, 0, 0, 0)
  Expected: 2147483648.000000
  Observed: 0.000000
  Source: image


This test is disabled in the intel CI.
Comment 1 Kenneth Graunke 2016-11-29 00:12:36 UTC
I can reproduce this.  I have no idea what's going on yet.
Comment 2 Kenneth Graunke 2016-12-05 09:13:20 UTC
I've got some patches.  Seems like one of my hacks is going wrong.  I'm still not sure why the hack isn't working, but I've solved the issue it was trying to work around more definitively, allowing me to drop it, which ends up fixing this.
Comment 3 Kenneth Graunke 2016-12-06 20:40:01 UTC
Fixed by:

commit 05a4e3a0096a8a3ed277bbcf5b0b1393b5e6e494
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Sun Dec 4 22:35:42 2016 -0800

    i965: Don't force SSO layout for VS->TCS.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.